<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:padding="0dp"
        tools:context="com.kkmovies.kankanmovies.Activities.MovieDetailsActivity">


        <ImageView
            android:id="@+id/movie_backgrd"
            android:layout_width="0dp"
            android:layout_height="206dp"
            android:layout_margin="0dp"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:padding="0dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/screen_background_dark" />

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="wrap_content"
            android:layout_height="221dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/poster_border"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie_title_lbl"
            app:layout_constraintTop_toBottomOf="@+id/movie_backgrd" />

        <TextView
            android:id="@+id/movie_year"
            android:layout_width="0dp"
            android:layout_height="17dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie_year_lbl"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />

        <TextView
            android:id="@+id/movie_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_runtime" />

        <TextView
            android:id="@+id/movie_title_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/movie_title"
            app:layout_constraintBaseline_toBaselineOf="@+id/movie_title"
            app:layout_constraintStart_toEndOf="@+id/movie_poster" />

        <TextView
            android:id="@+id/movie_year_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/movie_year"
            app:layout_constraintBaseline_toBaselineOf="@+id/movie_year"
            app:layout_constraintStart_toEndOf="@+id/movie_poster" />

        <TextView
            android:id="@+id/movie_genre_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/movie_genre"
            app:layout_constraintBaseline_toBaselineOf="@+id/movie_genre"
            app:layout_constraintStart_toEndOf="@+id/movie_poster" />

        <TextView
            android:id="@+id/movie_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie_genre_lbl"
            app:layout_constraintTop_toBottomOf="@+id/movie_year" />

        <TextView
            android:id="@+id/movie_runtime_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/movie_time"
            app:layout_constraintBaseline_toBaselineOf="@+id/movie_runtime"
            app:layout_constraintStart_toEndOf="@+id/movie_poster" />

        <TextView
            android:id="@+id/movie_runtime"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie_runtime_lbl"
            app:layout_constraintTop_toBottomOf="@+id/movie_genre" />

        <Button
            android:id="@+id/movie_add_wishlist"
            style="@android:style/Widget.Material.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:alpha="50"
            android:text="@string/button_add_wishlist"
            app:layout_constraintBottom_toBottomOf="@+id/movie_backgrd"
            app:layout_constraintEnd_toEndOf="@+id/movie_backgrd"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/movie_videos_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/main_videos"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/recycler_view_movie_videos"
            app:layout_constraintTop_toBottomOf="@+id/movie_details" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_movie_videos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_videos_lbl" />

        <Button
            android:id="@+id/movie_remove_wishlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:text="@string/button_delete_wishlist"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/movie_backgrd"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/movie_recommended_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:maxLines="1"
            android:text="@string/movie_recommended"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_movie_videos" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_movie_recommended"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_recommended_title" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
