<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kkmovies.kankanmovies.Activities.LoginActivity">

    <TextView
        android:id="@+id/login_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="184dp"
        android:text="@string/login_email_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="172dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/login_email_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_pwd_tv"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_password_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_tv" />

    <EditText
        android:id="@+id/login_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/login_pwd_tv"
        app:layout_constraintTop_toBottomOf="@+id/login_email" />

    <Button
        android:id="@+id/login_signin_btn"
        style="@android:style/Theme.Material.Light.DarkActionBar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="90dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="20dp"
        android:text="@string/common_signin_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_pwd" />

    <Button
        android:id="@+id/login_register_btn"
        style="@android:style/Theme.Material.Light.DarkActionBar"
        android:layout_width="187dp"
        android:layout_height="40dp"
        android:layout_marginBottom="36dp"
        android:text="@string/register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/login_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminateOnly="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="68dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_signin_btn" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_facebook_button"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_signin_btn" />

</android.support.constraint.ConstraintLayout>
